estruturas e inputs html

--- a/htmls/estrutura.html
+++ b/htmls/estrutura.html
@@ -7,6 +7,6 @@
     <title>Página Sobre estrutura HTML</title>
 </head>
 <body>
-    Texto qualquer 
+    <h1>Texto qualquer</h1> 
 </body>
 </html>
